--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -12,4 +12,22 @@ body {
   color: var(--clr-text-400);
   background-color: var(--bg);
   overflow: hidden;
+
+  :focus-visible {
+    outline: 1px dashed var(--clr-text-700);
+  }
+}
+
+main {
+  display: flex;
+  height: calc(100dvh - 43.25px);
+
+  .page {
+    width: 100%;
+    overflow: hidden auto;
+  }
+
+  @media (width >= 750px) {
+    height: calc(100dvh - 58px);
+  }
 }
