--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -20,11 +20,17 @@ body {
 
 main {
   display: flex;
+  flex-direction: column;
   height: calc(100dvh - 43.25px);
 
-  .page {
+  > div {
     width: 100%;
+    height: 100%;
     overflow: hidden auto;
+  }
+
+  @media (width >= 450px) {
+    flex-direction: row;
   }
 
   @media (width >= 750px) {
