--- a/frontend/src/styles/layouts/_header.scss
+++ b/frontend/src/styles/layouts/_header.scss
@@ -21,17 +21,21 @@ header {
     svg {
       font-size: 1.8rem;
       fill: var(--clr-text-400);
+      outline: none;
 
       &:hover {
         fill: var(--clr-text-700);
         cursor: pointer;
+      }
+
+      &:focus-visible {
+        outline: 1px dashed var(--clr-text-700);
       }
     }
 
     .logo {
       display: inline-block;
       height: 32px;
-      user-select: none;
 
       img {
         height: 100%;
