--- a/frontend/src/styles/layouts/_sideBar.scss
+++ b/frontend/src/styles/layouts/_sideBar.scss
@@ -12,8 +12,9 @@
   border-right: 1px solid var(--border);
   background-color: var(--bg);
   transform: translate(-100%);
-  transition: transform 0.25s ease-in;
+  transition: transform 0.15s ease-in;
   overflow: hidden auto;
+  z-index: 50;
 
   .nav-links {
     display: flex;
