--- a/frontend/src/styles/layouts/_cardSection.scss
+++ b/frontend/src/styles/layouts/_cardSection.scss
@@ -1,3 +1,5 @@
+@use "../utilities/variable" as *;
+
 .card-section {
   overflow: hidden;
 
@@ -48,7 +50,7 @@
       }
     }
 
-    @media (width >= 450px) {
+    @media (width >= $tablet-device) {
       font-size: 1.15rem;
     }
   }
@@ -85,11 +87,11 @@
       margin-top: 0.2rem;
     }
 
-    @media (width >= 450px) {
+    @media (width >= $tablet-device) {
       gap: 1rem;
     }
 
-    @media (width >= 750px) {
+    @media (width >= $desktop-device) {
       gap: 1.2rem;
     }
   }
