--- a/frontend/src/styles/pages/_auth.scss
+++ b/frontend/src/styles/pages/_auth.scss
@@ -45,6 +45,7 @@ main.auth {
 
     .footer {
       display: flex;
+      flex-direction: row-reverse;
       justify-content: space-between;
       align-items: center;
       gap: 10px;
