Create movie page

--- a/frontend/src/styles/components/_button.scss
+++ b/frontend/src/styles/components/_button.scss
@@ -51,6 +51,7 @@
   &.btn--transperent {
     color: var(--clr-white-700);
     background: var(--bg-transperent);
+    opacity: 0.7;
 
     &:is(:hover, :focus-visible) {
       opacity: 1;
