--- a/frontend/src/styles/layouts/_banner.scss
+++ b/frontend/src/styles/layouts/_banner.scss
@@ -1,13 +1,25 @@
 @use "../utilities/variable" as *;
 
-.banner {
-  position: relative;
+.banner,
+.banner-loading {
   width: 100%;
-  height: 60vw;
+  height: 100%;
   min-height: 230px;
   max-height: 250px;
   border-radius: 15px;
-  background-color: var(--clr-text-400);
+  background-color: rgba(128, 128, 128, 0.3);
+
+  @media (width >= $tablet-device) {
+    max-height: 340px;
+  }
+
+  @media (width >= $desktop-device) {
+    max-height: 420px;
+  }
+}
+
+.banner {
+  position: relative;
   isolation: isolate;
   overflow: hidden;
 
@@ -41,7 +53,7 @@
     left: 1rem;
     bottom: 1rem;
     background: rgba(0, 0, 0, 0.3);
-    box-shadow: -70px -100px 100px 150px rgba(0, 0, 0, 0.3);
+    box-shadow: -70px -50px 100px 150px rgba(0, 0, 0, 0.3);
     z-index: 2;
     font-size: 1rem;
 
@@ -117,13 +129,5 @@
         scale: 1.3;
       }
     }
-  }
-
-  @media (width >= $tablet-device) {
-    max-height: 340px;
-  }
-
-  @media (width >= $desktop-device) {
-    max-height: 420px;
   }
 }
