--- a/frontend/src/styles/layouts/_cardSection.scss
+++ b/frontend/src/styles/layouts/_cardSection.scss
@@ -1,5 +1,22 @@
 @use "../utilities/variable" as *;
 
+.card-section,
+.card-section-loading {
+  .cards {
+    display: flex;
+    gap: 0.8rem;
+    padding-bottom: 5px;
+
+    @media (width >= $tablet-device) {
+      gap: 1rem;
+    }
+
+    @media (width >= $desktop-device) {
+      gap: 1.2rem;
+    }
+  }
+}
+
 .card-section {
   overflow: hidden;
 
@@ -56,10 +73,13 @@
   }
 
   .cards {
-    display: flex;
-    gap: 0.8rem;
     overflow-x: auto;
-    padding-bottom: 5px;
+
+    &:has(.not-found) {
+      justify-content: center;
+      align-items: center;
+      height: 180px;
+    }
 
     &::-webkit-scrollbar {
       visibility: hidden;
@@ -87,12 +107,17 @@
       margin-top: 0.2rem;
     }
 
-    @media (width >= $tablet-device) {
-      gap: 1rem;
-    }
+    .not-found {
+      font-family: var(--ff-inter);
+      font-size: 1.2rem;
 
-    @media (width >= $desktop-device) {
-      gap: 1.2rem;
+      @media (min-width: $tablet-device) {
+        font-size: 1.4rem;
+      }
+
+      @media (min-width: $desktop-device) {
+        font-size: 1.6rem;
+      }
     }
   }
 
@@ -108,5 +133,21 @@
     &:hover .view-all {
       opacity: 1 !important;
     }
+  }
+}
+
+.card-section-loading {
+  margin-top: 1rem;
+
+  > .title {
+    width: 210px;
+    height: 2rem;
+    margin-bottom: 1.5rem;
+    border-radius: 8px;
+    background-color: rgba(128, 128, 128, 0.3);
+  }
+
+  @media (min-width: $desktop-device) {
+    margin-top: 1.5rem;
   }
 }
