--- a/frontend/src/styles/pages/_details.scss
+++ b/frontend/src/styles/pages/_details.scss
@@ -1,10 +1,39 @@
 @use "../utilities/variable" as *;
 
 .movie-page,
+.tvshow-page,
+.details-page-loading {
+  .poster {
+    width: 100px;
+    height: 154px;
+    border-radius: 10px;
+    flex-shrink: 0;
+
+    @media (min-width: $tablet-device) {
+      width: 150px;
+      height: 204px;
+    }
+
+    @media (min-width: $desktop-device) {
+      width: 200px;
+      height: 260px;
+    }
+  }
+}
+
+.movie-page,
 .tvshow-page {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  [theme="light"] & {
+    --bg-transperent: rgba(241, 241, 241, 0.9);
+
+    .btn--transperent {
+      color: var(--clr-text-700);
+    }
+  }
 
   h1,
   h2 {
@@ -27,25 +56,11 @@
     overflow: hidden;
 
     .poster {
-      width: 100px;
-      height: 154px;
-      border-radius: 10px;
       overflow: hidden;
-      flex-shrink: 0;
 
       img {
         width: 100%;
         height: 100%;
-      }
-
-      @media (min-width: $tablet-device) {
-        width: 150px;
-        height: 204px;
-      }
-
-      @media (min-width: $desktop-device) {
-        width: 200px;
-        height: 260px;
       }
     }
 
@@ -173,6 +188,103 @@
       padding-left: 1rem;
       border-left: 1px solid var(--border);
       overflow: hidden;
+    }
+  }
+}
+
+.details-page-loading {
+  .video-player,
+  .poster,
+  .title,
+  .tagline,
+  .img,
+  .name,
+  .character {
+    background-color: rgba(128, 128, 128, 0.3);
+  }
+
+  .details {
+    display: flex;
+    gap: 1.5rem;
+    margin-top: 1.5rem;
+  }
+
+  .title,
+  .tagline {
+    border-radius: 8px;
+  }
+
+  .title {
+    height: 2rem;
+    width: 150px;
+    margin-bottom: 1rem;
+  }
+
+  .tagline {
+    height: 1.8rem;
+    width: 250px;
+  }
+
+  .sticky-section {
+    display: none;
+  }
+
+  @media (min-width: 1250px) {
+    display: flex;
+    gap: 1rem;
+
+    .main {
+      flex-grow: 1;
+
+      .details {
+        padding-bottom: 2rem;
+      }
+    }
+
+    .sticky-section {
+      position: sticky;
+      inset: 0;
+      display: block;
+      width: 270px;
+      height: 100%;
+      padding-left: 1rem;
+      border-left: 1px solid var(--border);
+
+      .casts {
+        display: grid;
+        gap: 1rem;
+        margin-top: 2rem;
+      }
+
+      .cast {
+        display: flex;
+        gap: 10px;
+
+        .img {
+          width: 50px;
+          aspect-ratio: 1;
+          border-radius: 8px;
+        }
+
+        .detail {
+          display: grid;
+          align-items: center;
+
+          .name,
+          .character {
+            height: 15px;
+            border-radius: 4px;
+          }
+
+          .name {
+            width: 100px;
+          }
+
+          .character {
+            width: 140px;
+          }
+        }
+      }
     }
   }
 }
