--- a/frontend/src/styles/pages/_index.scss
+++ b/frontend/src/styles/pages/_index.scss
@@ -7,7 +7,7 @@
 @forward "movie";
 @forward "tvshow";
 @forward "category";
-@forward "mediaNotFound";
+@forward "alertPage";
 
 .page {
   display: flex;
